Agregando atributo cancelada a Calendario.

--- a/DoctorWebASP/DoctorWebASP.csproj
+++ b/DoctorWebASP/DoctorWebASP.csproj
@@ -232,6 +232,10 @@
     <Compile Include="Migrations\201706200301584_AddingAttributesToRecursoHospitalario.Designer.cs">
       <DependentUpon>201706200301584_AddingAttributesToRecursoHospitalario.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706210131106_AddingCanceladaToCalendario.cs" />
+    <Compile Include="Migrations\201706210131106_AddingCanceladaToCalendario.Designer.cs">
+      <DependentUpon>201706210131106_AddingCanceladaToCalendario.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Calendario.cs" />
@@ -1377,6 +1381,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706200301584_AddingAttributesToRecursoHospitalario.resx">
       <DependentUpon>201706200301584_AddingAttributesToRecursoHospitalario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706210131106_AddingCanceladaToCalendario.resx">
+      <DependentUpon>201706210131106_AddingCanceladaToCalendario.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
