--- a/DoctorWebASP/DoctorWebASP.csproj
+++ b/DoctorWebASP/DoctorWebASP.csproj
@@ -212,6 +212,10 @@
     <Compile Include="Migrations\201706192310477_AgregarClaseEspecialidadMedicaYRelacionConMedico.Designer.cs">
       <DependentUpon>201706192310477_AgregarClaseEspecialidadMedicaYRelacionConMedico.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706231426193_Test.cs" />
+    <Compile Include="Migrations\201706231426193_Test.Designer.cs">
+      <DependentUpon>201706231426193_Test.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Calendario.cs" />
@@ -230,6 +234,9 @@
     <Compile Include="Models\Tratamiento.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\CentrosMedicosViewModel.cs" />
+    <Compile Include="ViewModels\EspecialidadViewModel.cs" />
+    <Compile Include="ViewModels\MedicoViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include=".gitignore" />
@@ -1345,6 +1352,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706192310477_AgregarClaseEspecialidadMedicaYRelacionConMedico.resx">
       <DependentUpon>201706192310477_AgregarClaseEspecialidadMedicaYRelacionConMedico.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706231426193_Test.resx">
+      <DependentUpon>201706231426193_Test.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
