--- a/DoctorWebASP/DoctorWebASP.csproj
+++ b/DoctorWebASP/DoctorWebASP.csproj
@@ -77,6 +77,14 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -216,6 +224,10 @@
     <Compile Include="Migrations\201706231426193_Test.Designer.cs">
       <DependentUpon>201706231426193_Test.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706232012211_AgregarDisponibleAClaseCalendario.cs" />
+    <Compile Include="Migrations\201706232012211_AgregarDisponibleAClaseCalendario.Designer.cs">
+      <DependentUpon>201706232012211_AgregarDisponibleAClaseCalendario.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Calendario.cs" />
@@ -235,6 +247,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CentrosMedicosViewModel.cs" />
+    <Compile Include="ViewModels\CitaViewModel.cs" />
     <Compile Include="ViewModels\EspecialidadViewModel.cs" />
     <Compile Include="ViewModels\MedicoViewModel.cs" />
   </ItemGroup>
@@ -321,6 +334,7 @@
     <Content Include="Content\dist\js\demo.js" />
     <Content Include="Content\dist\js\pages\dashboard.js" />
     <Content Include="Content\dist\js\pages\dashboard2.js" />
+    <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
     <Content Include="Content\fonts\fontawesome-webfont.svg" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
@@ -1333,6 +1347,7 @@
     <Content Include="Views\Citas\SolicitarCita.cshtml" />
     <Content Include="Views\Citas\SeleccionarEspecialidad.cshtml" />
     <Content Include="Views\Citas\SeleccionarMedico.cshtml" />
+    <Content Include="Views\Citas\SeleccionarHorario.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -1355,6 +1370,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706231426193_Test.resx">
       <DependentUpon>201706231426193_Test.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706232012211_AgregarDisponibleAClaseCalendario.resx">
+      <DependentUpon>201706232012211_AgregarDisponibleAClaseCalendario.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
