--- a/DoctorWebServiciosWCF/DoctorWebServiciosWCF.csproj
+++ b/DoctorWebServiciosWCF/DoctorWebServiciosWCF.csproj
@@ -1,4 +1,5 @@
-﻿<Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -68,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Services\NotificacionService.svc" />
+    <Content Include="Services\ReporteService.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -86,8 +88,12 @@
     <Compile Include="Models\Service\ResultadoServicio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\INotificacionService.cs" />
+    <Compile Include="Services\IReporteService.cs" />
     <Compile Include="Services\NotificacionService.svc.cs">
       <DependentUpon>NotificacionService.svc</DependentUpon>
+    </Compile>
+    <Compile Include="Services\ReporteService.svc.cs">
+      <DependentUpon>ReporteService.svc</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
