--- a/DoctorWebASP/Web.config
+++ b/DoctorWebASP/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-DoctorWebASP-20170614091701.mdf;Initial Catalog=aspnet-DoctorWebASP-20170614091701;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
@@ -16,7 +16,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="WebServiceUrl" value="http://localhost:53951/"/>
+    <add key="WebServiceUrl" value="http://localhost:53951/" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
