--- a/DoctorWebASP/DoctorWebASP.csproj
+++ b/DoctorWebASP/DoctorWebASP.csproj
@@ -283,8 +283,17 @@
     <Compile Include="Migrations\201706250031164_InitialModelAfterRestart.Designer.cs">
       <DependentUpon>201706250031164_InitialModelAfterRestart.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706250400261_AddingAlmacen.cs" />
+    <Compile Include="Migrations\201706250400261_AddingAlmacen.Designer.cs">
+      <DependentUpon>201706250400261_AddingAlmacen.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706250407561_AddingUsoRecurso.cs" />
+    <Compile Include="Migrations\201706250407561_AddingUsoRecurso.Designer.cs">
+      <DependentUpon>201706250407561_AddingUsoRecurso.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Almacen.cs" />
     <Compile Include="Models\Calendario.cs" />
     <Compile Include="Models\CentroMedico.cs" />
     <Compile Include="Models\Cita.cs" />
@@ -301,6 +310,7 @@
     <Compile Include="Models\Service\ResultadoServicio.cs" />
     <Compile Include="Models\Service\ResultadoServicioPaginado.cs" />
     <Compile Include="Models\Tratamiento.cs" />
+    <Compile Include="Models\UsoRecurso.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\ReportesViewModel.cs" />
@@ -1473,6 +1483,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706250031164_InitialModelAfterRestart.resx">
       <DependentUpon>201706250031164_InitialModelAfterRestart.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706250400261_AddingAlmacen.resx">
+      <DependentUpon>201706250400261_AddingAlmacen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706250407561_AddingUsoRecurso.resx">
+      <DependentUpon>201706250407561_AddingUsoRecurso.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes2\R0Personas.rdlc" />
   </ItemGroup>
