Cambios presentación calendario

--- a/DoctorWebASP/DoctorWebASP.csproj
+++ b/DoctorWebASP/DoctorWebASP.csproj
@@ -1442,6 +1442,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Content\Resources\" />
     <Folder Include="fonts\" />
   </ItemGroup>
   <ItemGroup>
