--- a/DoctorWebASP/DoctorWebASP.csproj
+++ b/DoctorWebASP/DoctorWebASP.csproj
@@ -283,8 +283,17 @@
     <Compile Include="Migrations\201706250031164_InitialModelAfterRestart.Designer.cs">
       <DependentUpon>201706250031164_InitialModelAfterRestart.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706250400261_AddingAlmacen.cs" />
+    <Compile Include="Migrations\201706250400261_AddingAlmacen.Designer.cs">
+      <DependentUpon>201706250400261_AddingAlmacen.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706251704526_AddingUsoRecurso.cs" />
+    <Compile Include="Migrations\201706251704526_AddingUsoRecurso.Designer.cs">
+      <DependentUpon>201706251704526_AddingUsoRecurso.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Almacen.cs" />
     <Compile Include="Models\Calendario.cs" />
     <Compile Include="Models\CentroMedico.cs" />
     <Compile Include="Models\Cita.cs" />
@@ -301,6 +310,7 @@
     <Compile Include="Models\Service\ResultadoServicio.cs" />
     <Compile Include="Models\Service\ResultadoServicioPaginado.cs" />
     <Compile Include="Models\Tratamiento.cs" />
+    <Compile Include="Models\UsoRecurso.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\ReportesViewModel.cs" />
@@ -1359,11 +1369,13 @@
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery-ui.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\moment.min.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
@@ -1431,6 +1443,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="fonts\" />
+    <Folder Include="Views\Usuario\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\fonts\glyphicons-halflings-regular.woff" />
@@ -1473,6 +1486,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706250031164_InitialModelAfterRestart.resx">
       <DependentUpon>201706250031164_InitialModelAfterRestart.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706250400261_AddingAlmacen.resx">
+      <DependentUpon>201706250400261_AddingAlmacen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706251704526_AddingUsoRecurso.resx">
+      <DependentUpon>201706251704526_AddingUsoRecurso.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes2\R0Personas.rdlc" />
   </ItemGroup>
