--- a/DoctorWebServiciosWCF/Web.config
+++ b/DoctorWebServiciosWCF/Web.config
@@ -32,6 +32,10 @@
       <service name="DoctorWebServiciosWCF.Services.NotificacionService" behaviorConfiguration="ServiceBehavior">
         <endpoint address="" binding="webHttpBinding" contract="DoctorWebServiciosWCF.Services.INotificacionService" behaviorConfiguration="webBehavior"></endpoint>
       </service>
+    
+      <service name="DoctorWebServiciosWCF.Services.ReportesService" behaviorConfiguration="ServiceBehavior">
+        <endpoint address="" binding="webHttpBinding" contract="DoctorWebServiciosWCF.Services.IReportesService" behaviorConfiguration="webBehavior"></endpoint>
+      </service>
     </services>
     <behaviors>
       <endpointBehaviors>
