--- a/DoctorWebServiciosWCF/DoctorWebServiciosWCF.csproj
+++ b/DoctorWebServiciosWCF/DoctorWebServiciosWCF.csproj
@@ -70,6 +70,10 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\DoctorWebBD.mdf" />
+    <Content Include="App_Data\DoctorWebBD_log.ldf">
+      <DependentUpon>DoctorWebBD.mdf</DependentUpon>
+    </Content>
     <Content Include="Services\NotificacionService.svc" />
     <Content Include="Services\ReporteService.svc" />
     <Content Include="Web.config" />
@@ -78,9 +82,9 @@
     <Compile Include="Controllers\Helpers\Extensiones.cs" />
     <Compile Include="Controllers\Helpers\Utilidades.cs" />
     <Compile Include="Controllers\ReporteController.cs" />
-    <Compile Include="Migrations\201706220653104_Notificaciones.cs" />
-    <Compile Include="Migrations\201706220653104_Notificaciones.Designer.cs">
-      <DependentUpon>201706220653104_Notificaciones.cs</DependentUpon>
+    <Compile Include="Migrations\201706270010038_Notificaciones.cs" />
+    <Compile Include="Migrations\201706270010038_Notificaciones.Designer.cs">
+      <DependentUpon>201706270010038_Notificaciones.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Notificacion.cs" />
@@ -100,11 +104,10 @@
       <DependentUpon>ReporteService.svc</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="packages.config" />
+    <None Include="Properties\PublishProfiles\PublicarEnLocalhostIIS.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -113,8 +116,8 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201706220653104_Notificaciones.resx">
-      <DependentUpon>201706220653104_Notificaciones.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201706270010038_Notificaciones.resx">
+      <DependentUpon>201706270010038_Notificaciones.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
