--- a/DoctorWebASP/DoctorWebASP.csproj
+++ b/DoctorWebASP/DoctorWebASP.csproj
@@ -212,21 +212,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201706151337574_Init.cs" />
-    <Compile Include="Migrations\201706151337574_Init.Designer.cs">
-      <DependentUpon>201706151337574_Init.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201706192310477_AgregarClaseEspecialidadMedicaYRelacionConMedico.cs" />
-    <Compile Include="Migrations\201706192310477_AgregarClaseEspecialidadMedicaYRelacionConMedico.Designer.cs">
-      <DependentUpon>201706192310477_AgregarClaseEspecialidadMedicaYRelacionConMedico.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201706231426193_Test.cs" />
-    <Compile Include="Migrations\201706231426193_Test.Designer.cs">
-      <DependentUpon>201706231426193_Test.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201706232012211_AgregarDisponibleAClaseCalendario.cs" />
-    <Compile Include="Migrations\201706232012211_AgregarDisponibleAClaseCalendario.Designer.cs">
-      <DependentUpon>201706232012211_AgregarDisponibleAClaseCalendario.cs</DependentUpon>
+    <Compile Include="Migrations\201706262204233_Init.cs" />
+    <Compile Include="Migrations\201706262204233_Init.Designer.cs">
+      <DependentUpon>201706262204233_Init.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -247,9 +235,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CentrosMedicosViewModel.cs" />
-    <Compile Include="ViewModels\CitaViewModel.cs" />
+    <Compile Include="ViewModels\CalendarioViewModel.cs" />
+    <Compile Include="ViewModels\DoctorCitaViewModel.cs" />
     <Compile Include="ViewModels\EspecialidadViewModel.cs" />
     <Compile Include="ViewModels\MedicoViewModel.cs" />
+    <Compile Include="ViewModels\SadFaceViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include=".gitignore" />
@@ -1348,6 +1338,9 @@
     <Content Include="Views\Citas\SeleccionarEspecialidad.cshtml" />
     <Content Include="Views\Citas\SeleccionarMedico.cshtml" />
     <Content Include="Views\Citas\SeleccionarHorario.cshtml" />
+    <Content Include="Views\Citas\SadFace.cshtml" />
+    <Content Include="Views\Citas\IndexDoctor.cshtml" />
+    <Content Include="Views\Citas\DetailsDoctor.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -1362,17 +1355,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201706151337574_Init.resx">
-      <DependentUpon>201706151337574_Init.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201706192310477_AgregarClaseEspecialidadMedicaYRelacionConMedico.resx">
-      <DependentUpon>201706192310477_AgregarClaseEspecialidadMedicaYRelacionConMedico.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201706231426193_Test.resx">
-      <DependentUpon>201706231426193_Test.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201706232012211_AgregarDisponibleAClaseCalendario.resx">
-      <DependentUpon>201706232012211_AgregarDisponibleAClaseCalendario.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201706262204233_Init.resx">
+      <DependentUpon>201706262204233_Init.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
